@@ -1,16 +1,16 @@
 package com.yapp.ndgl.domain.travel.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
 import com.yapp.ndgl.common.exception.GlobalException;
 import com.yapp.ndgl.common.exception.TravelErrorCode;
 import com.yapp.ndgl.domain.travel.TravelTemplate;
-import com.yapp.ndgl.domain.travel.mapper.TravelTemplateMapper;
 import com.yapp.ndgl.domain.travel.TravelTemplatePlace;
 import com.yapp.ndgl.domain.travel.entity.TravelTemplatePlaceEntity;
+import com.yapp.ndgl.domain.travel.mapper.TravelTemplateMapper;
 import com.yapp.ndgl.domain.travel.repository.TravelTemplatePlaceRepository;
 import com.yapp.ndgl.domain.travel.repository.TravelTemplateRepository;
 
@@ -25,12 +25,14 @@ public class TravelTemplateDomainService {
     private final TravelTemplateRepository travelTemplateRepository;
     private final TravelTemplatePlaceRepository travelTemplatePlaceRepository;
 
+    @Transactional(readOnly = true)
     public TravelTemplate findById(final Long id) {
         return travelTemplateRepository.findById(id)
             .map(TravelTemplateMapper::toDomain)
             .orElseThrow(() -> new GlobalException(TravelErrorCode.NOT_FOUND_TRAVEL_TEMPLATE));
     }
 
+    @Transactional(readOnly = true)
     public List<TravelTemplatePlace> findPlacesByTravelTemplateId(final Long travelTemplateId) {
         List<TravelTemplatePlaceEntity> placeEntities = travelTemplatePlaceRepository
             .findByTravelTemplateIdOrderByDayAscSequenceAsc(travelTemplateId);
@@ -38,11 +40,13 @@ public class TravelTemplateDomainService {
         return placeEntities.stream()
             .map(entity -> TravelTemplatePlace.builder()
                 .id(entity.getId())
+                .travelTemplateId(entity.getTravelTemplateId())
                 .sequence(entity.getSequence())
                 .day(entity.getDay())
                 .travelerTip(entity.getTravelerTip())
                 .placeId(entity.getPlaceId())
+                .estimatedDuration(entity.getEstimatedDuration())
                 .build())
-            .collect(Collectors.toList());
+            .toList();
     }
 }
